Fix innovation img spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -102,7 +102,8 @@ body h1, h2, h3, h4, p, a {
 
 .right-side img, .left-side img {
 	max-width: 100%;
-    max-height: 85vh;
+	max-height: 85vh;
+	margin: auto;
     
 	border: 0.4vw solid #fff;
 }
